--- a/1-main/index.html
+++ b/1-main/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="../image/logo/head-icon.png">
     <link rel="stylesheet" href="../bootstrap/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/3cf65b98ce.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../swiper/swiper.bundle.min.css">
     <link rel="stylesheet" href="../main.css">
 </head>
 <body>
@@ -379,7 +380,68 @@
         </div>
     </header>
 
-    <main class="py-5"></main>
+    <main class="py-5 sobsan-main">
+        <section class="swiper-section-1 w-100">
+            <div class="swiper main-swiper-1">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide"><img src="../image/1-main/swiper-1/slide-1.jpg" alt="slide"></div>
+                    <div class="swiper-slide"><img src="../image/1-main/swiper-1/slide-2.jpg" alt="slide"></div>
+                    <div class="swiper-slide"><img src="../image/1-main/swiper-1/slide-3.jpg" alt="slide"></div>
+                    <div class="swiper-slide"><img src="../image/1-main/swiper-1/slide-4.jpg" alt="slide"></div>
+                </div>
+            </div>
+        </section>
+        <section class="swiper-section-2 w-100 container py-5">
+            <div class="d-flex flex-column">
+                <div class="swiper main-swiper-2 py-5">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="row">
+                                <div class="col-12 col-md-6 slide-info d-flex flex-column align-items-center justify-content-center">
+                                    <h4>La Kreos</h4>
+                                    <span>
+                                        Daxili divar və tavanlarda istifadə üçün hazırlanmış təbii tərkibli, qumaş effektli dekorativ boyadır.
+                                        Müasir interyer üçün əvəzsiz məhsuldur. Toxunma qumaşların klassikdən modernə doğru estetik görüntüsünü özündə əks etdirir.
+                                    </span>
+                                    <button class="hover-effect-2">Sifariş et <i class="fa-solid fa-arrow-right-long"></i></button>
+                                </div>
+                                <div class="col-12 col-md-6 d-flex justify-content-center align-items-center">
+                                    <div class="slide-image">
+                                        <img src="../image/1-main/swiper-2/img-1.png" class="w-100">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="row">
+                                <div class="col-12 col-md-6 slide-info d-flex flex-column align-items-center justify-content-center">
+                                    <h4>Crystal Boya</h4>
+                                    <span>
+                                        Tərkibindəki metallik piqmentlər və xüsusi qatqılar sayəsində istifadə olunduğu səthdə olduqca gözoxşayan,
+                                        zərif və dekorativ görünüş yaradır. Eyni zamanda səthdəki xırda qüsurları ustalıqla örtür. Parlaqlığını və rəngini uzun müddət qoruyur.
+                                    </span>
+                                    <button class="hover-effect-2">Sifariş et <i class="fa-solid fa-arrow-right-long"></i></button>
+                                </div>
+                                <div class="col-12 col-md-6 d-flex justify-content-center align-items-center">
+                                    <div class="slide-image">
+                                        <img src="../image/1-main/swiper-2/img-2.png" class="w-100">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                </div>
+                <div class="swiper-bottom-part py-5 d-flex flex-column align-items-center flex-md-row justify-content-around">
+                    <span class="text-center">Peşəkar bir məsləhətçinin məsləhətinə ehtiyacınız var?</span>
+                    <div class="d-flex flex-column flex-lg-row py-3 links">
+                        <div class="d-flex align-items-center px-3 py-2"><span><i class="fa-solid fa-phone"></i></span><a href="#">(+994 12) 404 45 45</a></div>
+                        <div class="d-flex align-items-center px-3 py-2"><span><i class="fa-solid fa-question"></i></span><a href="#">Bizə yazın</a></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
 
     <footer class="py-5">
@@ -500,6 +562,8 @@
 
 
     <script src="../bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="../swiper/swiper.bundle.min.js"></script>
+    <script src="../swiper.js"></script>
     <script src="../main.js"></script>
 </body>
 </html>
