--- a/1-main/index.html
+++ b/1-main/index.html
@@ -441,6 +441,255 @@
                 </div>
             </div>
         </section>
+        <section class="swiper-section-3 w-100 container py-5">
+            <div class="product-swiper d-flex flex-column align-items-center">
+                <h3>Popular məhsullar</h3>
+                <div class="swiper main-swiper-3 w-100">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="sobsan-product-card">
+                                <div class="spc-header">
+                                    <span class="badge">TƏKLİF OLUNAN</span>
+                                </div>
+                                <div class="spc-body">
+                                    <div class="spc-image"><img src="../image/1-main/products/img-1.jpg"></div>
+                                    <div class="spc-info">
+                                        <span class="brand">Sobsan</span>
+                                        <h5 class="name">EXCLUSİVE</h5>
+                                        <span class="description">Silikonlu, silinə bilən daxili cəbhə boyası</span>
+                                        <span class="price">10.00 AZN</span>
+                                        <span class="anbar-value"><span class="correct">&#10003;</span> Anbarda: 0 ədəd</span>
+                                    </div>
+                                </div>
+                                <div class="spc-footer">
+                                    <div class="sebet-btn hover-effect-green"><span>Səbətə at</span><i class="fa-solid fa-cart-shopping"></i></div>
+                                    <div class="d-flex justify-content-between w-100 py-3">
+                                        <div class="muqayise-btn"><i class="fa-solid fa-scale-balanced"></i><span>Müqayisə</span></div>
+                                        <div class="favorite-btn"><i class="fa-regular fa-heart"></i></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="sobsan-product-card">
+                                <div class="spc-header">
+                                    <span class="badge">TƏKLİF OLUNAN</span>
+                                </div>
+                                <div class="spc-body">
+                                    <div class="spc-image"><img src="../image/1-main/products/img-2.jpg"></div>
+                                    <div class="spc-info">
+                                        <span class="brand">Sobsan</span>
+                                        <h5 class="name">EXCLUSİVE</h5>
+                                        <span class="description">Silikonlu, silinə bilən daxili cəbhə boyası</span>
+                                        <span class="price">10.00 AZN</span>
+                                        <span class="anbar-value"><span class="correct">&#10003;</span> Anbarda: 0 ədəd</span>
+                                    </div>
+                                </div>
+                                <div class="spc-footer">
+                                    <div class="sebet-btn hover-effect-green"><span>Səbətə at</span><i class="fa-solid fa-cart-shopping"></i></div>
+                                    <div class="d-flex justify-content-between w-100 py-3">
+                                        <div class="muqayise-btn"><i class="fa-solid fa-scale-balanced"></i><span>Müqayisə</span></div>
+                                        <div class="favorite-btn"><i class="fa-regular fa-heart"></i></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="sobsan-product-card">
+                                <div class="spc-header">
+                                    <span class="badge">TƏKLİF OLUNAN</span>
+                                </div>
+                                <div class="spc-body">
+                                    <div class="spc-image"><img src="../image/1-main/products/img-3.jpg"></div>
+                                    <div class="spc-info">
+                                        <span class="brand">Sobsan</span>
+                                        <h5 class="name">EXCLUSİVE</h5>
+                                        <span class="description">Silikonlu, silinə bilən daxili cəbhə boyası</span>
+                                        <span class="price">10.00 AZN</span>
+                                        <span class="anbar-value"><span class="correct">&#10003;</span> Anbarda: 0 ədəd</span>
+                                    </div>
+                                </div>
+                                <div class="spc-footer">
+                                    <div class="sebet-btn hover-effect-green"><span>Səbətə at</span><i class="fa-solid fa-cart-shopping"></i></div>
+                                    <div class="d-flex justify-content-between w-100 py-3">
+                                        <div class="muqayise-btn"><i class="fa-solid fa-scale-balanced"></i><span>Müqayisə</span></div>
+                                        <div class="favorite-btn"><i class="fa-regular fa-heart"></i></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="sobsan-product-card">
+                                <div class="spc-header">
+                                    <span class="badge">TƏKLİF OLUNAN</span>
+                                </div>
+                                <div class="spc-body">
+                                    <div class="spc-image"><img src="../image/1-main/products/img-4.jpg"></div>
+                                    <div class="spc-info">
+                                        <span class="brand">Sobsan</span>
+                                        <h5 class="name">EXCLUSİVE</h5>
+                                        <span class="description">Silikonlu, silinə bilən daxili cəbhə boyası</span>
+                                        <span class="price">10.00 AZN</span>
+                                        <span class="anbar-value"><span class="correct">&#10003;</span> Anbarda: 0 ədəd</span>
+                                    </div>
+                                </div>
+                                <div class="spc-footer">
+                                    <div class="sebet-btn hover-effect-green"><span>Səbətə at</span><i class="fa-solid fa-cart-shopping"></i></div>
+                                    <div class="d-flex justify-content-between w-100 py-3">
+                                        <div class="muqayise-btn"><i class="fa-solid fa-scale-balanced"></i><span>Müqayisə</span></div>
+                                        <div class="favorite-btn"><i class="fa-regular fa-heart"></i></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="sobsan-product-card">
+                                <div class="spc-header">
+                                    <span class="badge">TƏKLİF OLUNAN</span>
+                                </div>
+                                <div class="spc-body">
+                                    <div class="spc-image"><img src="../image/1-main/products/img-5.jpg"></div>
+                                    <div class="spc-info">
+                                        <span class="brand">Sobsan</span>
+                                        <h5 class="name">EXCLUSİVE</h5>
+                                        <span class="description">Silikonlu, silinə bilən daxili cəbhə boyası</span>
+                                        <span class="price">10.00 AZN</span>
+                                        <span class="anbar-value"><span class="correct">&#10003;</span> Anbarda: 0 ədəd</span>
+                                    </div>
+                                </div>
+                                <div class="spc-footer">
+                                    <div class="sebet-btn hover-effect-green"><span>Səbətə at</span><i class="fa-solid fa-cart-shopping"></i></div>
+                                    <div class="d-flex justify-content-between w-100 py-3">
+                                        <div class="muqayise-btn"><i class="fa-solid fa-scale-balanced"></i><span>Müqayisə</span></div>
+                                        <div class="favorite-btn"><i class="fa-regular fa-heart"></i></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="sobsan-product-card">
+                                <div class="spc-header">
+                                    <span class="badge">TƏKLİF OLUNAN</span>
+                                </div>
+                                <div class="spc-body">
+                                    <div class="spc-image"><img src="../image/1-main/products/img-6.jpg"></div>
+                                    <div class="spc-info">
+                                        <span class="brand">Sobsan</span>
+                                        <h5 class="name">EXCLUSİVE</h5>
+                                        <span class="description">Silikonlu, silinə bilən daxili cəbhə boyası</span>
+                                        <span class="price">10.00 AZN</span>
+                                        <span class="anbar-value"><span class="correct">&#10003;</span> Anbarda: 0 ədəd</span>
+                                    </div>
+                                </div>
+                                <div class="spc-footer">
+                                    <div class="sebet-btn hover-effect-green"><span>Səbətə at</span><i class="fa-solid fa-cart-shopping"></i></div>
+                                    <div class="d-flex justify-content-between w-100 py-3">
+                                        <div class="muqayise-btn"><i class="fa-solid fa-scale-balanced"></i><span>Müqayisə</span></div>
+                                        <div class="favorite-btn"><i class="fa-regular fa-heart"></i></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="sobsan-product-card">
+                                <div class="spc-header">
+                                    <span class="badge">TƏKLİF OLUNAN</span>
+                                </div>
+                                <div class="spc-body">
+                                    <div class="spc-image"><img src="../image/1-main/products/img-7.jpg"></div>
+                                    <div class="spc-info">
+                                        <span class="brand">Sobsan</span>
+                                        <h5 class="name">EXCLUSİVE</h5>
+                                        <span class="description">Silikonlu, silinə bilən daxili cəbhə boyası</span>
+                                        <span class="price">10.00 AZN</span>
+                                        <span class="anbar-value"><span class="correct">&#10003;</span> Anbarda: 0 ədəd</span>
+                                    </div>
+                                </div>
+                                <div class="spc-footer">
+                                    <div class="sebet-btn hover-effect-green"><span>Səbətə at</span><i class="fa-solid fa-cart-shopping"></i></div>
+                                    <div class="d-flex justify-content-between w-100 py-3">
+                                        <div class="muqayise-btn"><i class="fa-solid fa-scale-balanced"></i><span>Müqayisə</span></div>
+                                        <div class="favorite-btn"><i class="fa-regular fa-heart"></i></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="sobsan-product-card">
+                                <div class="spc-header">
+                                    <span class="badge">TƏKLİF OLUNAN</span>
+                                </div>
+                                <div class="spc-body">
+                                    <div class="spc-image"><img src="../image/1-main/products/img-8.jpg"></div>
+                                    <div class="spc-info">
+                                        <span class="brand">Sobsan</span>
+                                        <h5 class="name">EXCLUSİVE</h5>
+                                        <span class="description">Silikonlu, silinə bilən daxili cəbhə boyası</span>
+                                        <span class="price">10.00 AZN</span>
+                                        <span class="anbar-value"><span class="correct">&#10003;</span> Anbarda: 0 ədəd</span>
+                                    </div>
+                                </div>
+                                <div class="spc-footer">
+                                    <div class="sebet-btn hover-effect-green"><span>Səbətə at</span><i class="fa-solid fa-cart-shopping"></i></div>
+                                    <div class="d-flex justify-content-between w-100 py-3">
+                                        <div class="muqayise-btn"><i class="fa-solid fa-scale-balanced"></i><span>Müqayisə</span></div>
+                                        <div class="favorite-btn"><i class="fa-regular fa-heart"></i></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="sobsan-product-card">
+                                <div class="spc-header">
+                                    <span class="badge">TƏKLİF OLUNAN</span>
+                                </div>
+                                <div class="spc-body">
+                                    <div class="spc-image"><img src="../image/1-main/products/img-9.jpg"></div>
+                                    <div class="spc-info">
+                                        <span class="brand">Sobsan</span>
+                                        <h5 class="name">EXCLUSİVE</h5>
+                                        <span class="description">Silikonlu, silinə bilən daxili cəbhə boyası</span>
+                                        <span class="price">10.00 AZN</span>
+                                        <span class="anbar-value"><span class="correct">&#10003;</span> Anbarda: 0 ədəd</span>
+                                    </div>
+                                </div>
+                                <div class="spc-footer">
+                                    <div class="sebet-btn hover-effect-green"><span>Səbətə at</span><i class="fa-solid fa-cart-shopping"></i></div>
+                                    <div class="d-flex justify-content-between w-100 py-3">
+                                        <div class="muqayise-btn"><i class="fa-solid fa-scale-balanced"></i><span>Müqayisə</span></div>
+                                        <div class="favorite-btn"><i class="fa-regular fa-heart"></i></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="sobsan-product-card">
+                                <div class="spc-header">
+                                    <span class="badge">TƏKLİF OLUNAN</span>
+                                </div>
+                                <div class="spc-body">
+                                    <div class="spc-image"><img src="../image/1-main/products/img-10.jpg"></div>
+                                    <div class="spc-info">
+                                        <span class="brand">Sobsan</span>
+                                        <h5 class="name">EXCLUSİVE</h5>
+                                        <span class="description">Silikonlu, silinə bilən daxili cəbhə boyası</span>
+                                        <span class="price">10.00 AZN</span>
+                                        <span class="anbar-value"><span class="correct">&#10003;</span> Anbarda: 0 ədəd</span>
+                                    </div>
+                                </div>
+                                <div class="spc-footer">
+                                    <div class="sebet-btn hover-effect-green"><span>Səbətə at</span><i class="fa-solid fa-cart-shopping"></i></div>
+                                    <div class="d-flex justify-content-between w-100 py-3">
+                                        <div class="muqayise-btn"><i class="fa-solid fa-scale-balanced"></i><span>Müqayisə</span></div>
+                                        <div class="favorite-btn"><i class="fa-regular fa-heart"></i></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
 
