--- a/1-main/index.html
+++ b/1-main/index.html
@@ -687,6 +687,86 @@
                             </div>
                         </div>
                     </div>
+                    <div class="swiper-pagination"></div>
+                </div>
+            </div>
+        </section>
+        <section class="room-section w-100 py-5">
+            <div class="container d-flex flex-column align-items-center">
+                <h3 class="text-center">Daxili rəngləndirmə təklifi</h3>
+                <div class="row">
+                    <div class="col-12 col-lg-4 col-xl-6 d-flex justify-content-center align-items-center">
+                        <div class="room-wrap">
+                            <div class="room-image">
+                                <img src="../image/1-main/room/img-1.png">
+                                <div class="black-box"><span>Qonaq Otağı</span></div>
+                            </div>
+                            <div class="room-text py-3 d-flex flex-column">
+                                <span>Daxili rəngləndirmə təklifləri</span>
+                                <span>Qonaq otağı</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 col-xl-3 justify-content-center align-items-center">
+                        <div class="room-wrap">
+                            <div class="room-image">
+                                <img src="../image/1-main/room/img-2.png">
+                                <div class="black-box"><span>Hamam otağı</span></div>
+                            </div>
+                            <div class="room-text py-3 d-flex flex-column">
+                                <span>Daxili rəngləndirmə təklifləri</span>
+                                <span>Hamam otağı</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 col-xl-3 justify-content-center align-items-center">
+                        <div class="room-wrap">
+                            <div class="room-image">
+                                <img src="../image/1-main/room/img-3.png">
+                                <div class="black-box"><span>Yataq Otağı</span></div>
+                            </div>
+                            <div class="room-text py-3 d-flex flex-column">
+                                <span>Daxili rəngləndirmə təklifləri</span>
+                                <span>Yataq otağı</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 col-xl-3 d-flex justify-content-center align-items-center">
+                        <div class="room-wrap">
+                            <div class="room-image">
+                                <img src="../image/1-main/room/img-4.png">
+                                <div class="black-box"><span>Uşaq Otağı</span></div>
+                            </div>
+                            <div class="room-text py-3 d-flex flex-column">
+                                <span>Daxili rəngləndirmə təklifləri</span>
+                                <span>Uşaq otağı</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 col-xl-3 justify-content-center align-items-center">
+                        <div class="room-wrap">
+                            <div class="room-image">
+                                <img src="../image/1-main/room/img-5.png">
+                                <div class="black-box"><span>Dəhliz</span></div>
+                            </div>
+                            <div class="room-text py-3 d-flex flex-column">
+                                <span>Daxili rəngləndirmə təklifləri</span>
+                                <span>Dəhliz</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-4 col-xl-6 justify-content-center align-items-center">
+                        <div class="room-wrap">
+                            <div class="room-image">
+                                <img src="../image/1-main/room/img-6.png">
+                                <div class="black-box"><span>Mətbəx</span></div>
+                            </div>
+                            <div class="room-text py-3 d-flex flex-column">
+                                <span>Daxili rəngləndirmə təklifləri</span>
+                                <span>Mətbəx</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
