--- a/1-main/index.html
+++ b/1-main/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../bootstrap/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/3cf65b98ce.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../swiper/swiper.bundle.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"/>
     <link rel="stylesheet" href="../main.css">
 </head>
 <body>
@@ -770,6 +771,91 @@
                 </div>
             </div>
         </section>
+        <section class="swiper-section-4 container ">
+            <div class="xeberler container d-flex flex-column align-items-center">
+                <h3>Xəbərlər</h3>
+                <div class="swiper main-swiper-4 w-100">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="d-flex flex-column xeber-content">
+                                <div class="xeber-image"><img src="../image/1-main/xeberler/img-1.jpg"></div>
+                                <p>Dekorativ boya təlimi</p>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="d-flex flex-column xeber-content">
+                                <div class="xeber-image"><img src="../image/1-main/xeberler/img-2.png"></div>
+                                <p>Ustalar üçün asan qeydiyyat</p>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="d-flex flex-column xeber-content">
+                                <div class="xeber-image"><img src="../image/1-main/xeberler/img-3.jpg"></div>
+                                <p>Xocalı soyqırımı</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                </div>
+            </div>
+        </section>
+        <section class="swiper-section-5">
+            <div class="container d-flex flex-column align-items-center">
+                <h3>Videolar</h3>
+                <div class="swiper main-swiper-5 w-100">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="video-item">
+                                <div class="video-poster"><img src="../image/1-main/video/img-1.jpg"></div>
+                                <div class="video-box">
+                                    <a href="https://www.youtube.com/watch?v=MPx4mekJkNA" data-fancybox="gallery">
+                                        <span class="play-btn"><i class="fa-solid fa-play"></i></span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="video-item">
+                                <div class="video-poster"><img src="../image/1-main/video/img-2.jpg"></div>
+                                <div class="video-box">
+                                    <a href="https://www.youtube.com/watch?v=_rdOU3hor2w" data-fancybox="gallery">
+                                        <span class="play-btn"><i class="fa-solid fa-play"></i></span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="video-item">
+                                <div class="video-poster"><img src="../image/1-main/video/img-3.jpg"></div>
+                                <div class="video-box">
+                                    <a href="https://www.youtube.com/watch?v=cF8A6YE_CwQ" data-fancybox="gallery">
+                                        <span class="play-btn"><i class="fa-solid fa-play"></i></span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="swiper-section-6 py-5">
+            <div class="container">
+                <div class="swiper main-swiper-6 w-100">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="partner-image"><img src="../image/1-main/partners/img-1.png"></div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="partner-image"><img src="../image/1-main/partners/img-2.png"></div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="partner-image"><img src="../image/1-main/partners/img-1.png"></div>
+                        </div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                </div> 
+            </div>
+        </section>
     </main>
 
 
@@ -892,6 +978,7 @@
 
     <script src="../bootstrap/bootstrap.bundle.min.js"></script>
     <script src="../swiper/swiper.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
     <script src="../swiper.js"></script>
     <script src="../main.js"></script>
 </body>
