--- a/2.1-haqqimizda/index.html
+++ b/2.1-haqqimizda/index.html
@@ -8,6 +8,8 @@
     <link rel="icon" href="../image/logo/head-icon.png">
     <link rel="stylesheet" href="../bootstrap/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/3cf65b98ce.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../swiper/swiper.bundle.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"/>
     <link rel="stylesheet" href="../main.css">
 </head>
 <body>
@@ -379,7 +381,100 @@
         </div>
     </header>
 
-    <main class="py-5"></main>
+    <main class="py-5 sobsan-about container py-5">
+        <div class="d-flex flex-column">
+            <div class="main-top-header d-flex flex-column">
+                <div class="links"><a href="../1-main/index.html">Əsas Səhifə</a><i class="fa-solid fa-chevron-right"></i><a href="../2.1-haqqimizda/index.html">Haqqımızda</a></div>
+                <h3>Haqqımızda</h3>
+            </div>
+            <div class="about-content">
+                <div class="row">
+                    <div class="col-12 col-md-6 col-7">
+                        <p>
+                            “ Rəmzi-S MMC ” - Sobsan markası ilə Qafqazın  və Azərbaycanın   ilk  lak - boya  istehsalı müəssisəsidir. 
+                            Müstəqilliyimizin bərpasından sonra düşünülmüş  iqtisadi siyasətin nəticəsi olaraq  iqtisadiyyatımızın bütün 
+                            sahələrində  sabitliyə nail olundu və əlverişli  biznes mühiti yaradıldı. Qeyri -neft sektorunun inkişafına  
+                            göstərilən diqqətin təzahürü olaraq özəl sektorun ölkənin sosial- iqtisadi inkişafında rolu daha da artdı. 
+                            Yeni-yeni nüfuzlu şirkətlərin yaranmasına zəmin yaratdı ki, bunun bariz nümunəsi  "Sobsan Boyadır".
+                            <br>Boya istehsalına  başlayarkən məqsədimiz Azərbaycan istehsalı və  Azərbaycan markası olmaq idi. Bu  
+                            inamla da Azərbaycanda  ilk yerli boya fabrikini qurduq və fabrikində yerli məhsul istehsal edən ilk  biz olduq. 
+                            Boya sektoruna girdiyimiz  ilk ildən artan satış və düzgün bazarlama sistemi sayəsində dinamik şəkildə böyüyərək 
+                            zaman içərisində sektorun  güvəndiyi  markaya çevrildik.
+                        </p>
+                    </div>
+                    <div class="col-12 col-md-6 col-5 image d-flex justify-content-center">
+                        <div class="image"><img src="../image/2-about/img-1.jpg" class="w-100"></div>
+                    </div>
+                    <div class="col-12 col-md-6 col-7">
+                        <p>
+                            22 ildir fəaliyyət göstərən "Sobsan Boyaları" müasir texnologiya ilə yüksək keyfiyyətdə  boya məhsulları  istehsal edir. 
+                            Yüksək keyfiyyətli yapışdırıcılar,  laklar,  astar boyalar, daxili və fasad boyaları, sənaye boyaları, kafel- keramika 
+                            yapışdırıcıları, su əsaslı boyalar, dekorativ boyalar, gəmi boyaları, təmir-inşaat alətləri və ən əsası ekoloji cəhətdən 
+                            sağlam məhsullar  istehsal edir.  Məhsullar ISO 9001:2015, ISO 45001:2018  standartlarına uyğun olaraq istehsal edilir. 
+                            İstehsal olunan  məhsullar müasir avadanlıqlarla  təchiz olunmuş laboratoriyalarda sınaqdan keçirilərək müştərilərə ən yaxşı 
+                            formada təqdim olunur. Hər il yeni məhsullar istehsal etməyi  hədəf olaraq müəyyən edən Sobsan daha çox müştərilərin istək və 
+                            tələbatı əsasında yeni məhsullar yaradır. Məhsul istehsal edərkən ekoloji təsirlərin nəzərə alınması işin əsas prinsipidir.
+                            <br>"Sobsan Boyaları" həmçinin də  premium keyfiyyətdə dekorativ boyalar istehsal edən ilk və tək yerli şirkətdir. 22 illik 
+                            təcrübənin verdiyi gücə dayanaraq dekorativ boya sahəsinə daim yeniliklər gətirən Sobsan həm fasad, həm də daxili məkanlar üçün  
+                            gözoxşayan, zərif görünüşü ilə fərq yaradan boyalar istehsal edir. Dekorativ boyalar sərhədsiz rəng seçimi və teksturası  ilə
+                            yanaşı  rütubətə davamlıdır və  ekoloji cəhətdən  zərərsizdir.
+                            <br>Bunlardan əlavə ilk dəfə "Sobsan Boyaları"   ölkə ərazisində Almaniya istehsalı olan “Rəngləndirmə Sistemi” vasitəsilə müştərilərinə 
+                            qısa müddətə istədikləri rəngi əldə etmə imkanı yaratdı. Demək olar ki, ölkə ərazisindəki bütün satış nöqtələrimiz bu avadanlıqla 
+                            təmin olunaraq müştərilərə həm vaxt , həm də maddi qənaət gətirdi. Məqsəd müştərilərin qısa müddətə istədikləri rəngi əldə etmə 
+                            imkanı yaradaraq dəyişən və daim yenilənən ehtiyaclarını yüksək səviyyədə qarşılamaqdır.
+                            <br>Bu gün  Azərbaycanın bütün regionları ilə  yanaşı  MDB  və Orta Asiya ölkələrinə, Yaxın Şərqə yüksək keyfiyyətli məhsullar  
+                            ixrac olunur. Hədəfi daha böyük satış bazarları olan Sobsan Boya, dövlətin dəstəyi ilə də ildən - ilə xarici ölkələrdəki satış 
+                            imkanlarını  artırır. 
+                            <br>"Sobsan Boyaları" olaraq ölkə daxilində qazandığımız güvən  və uğurları xarici ölkələrdə də  Azərbaycan brendi adı altında  
+                            tanıtmağı özümüzə borc bilirik. Hər keçən gün daha da böyüyən Sobsan  22 illik tarixində keçmişin təcrübəsi, işçilərin əzmi, 
+                            bugünün  texnologiyası  ilə sağlam addımlarla irəliləyir. Bu gün sektorun  önəmli şirkəti olan "Sobsan Boyaları"  işçi sayı və 
+                            gündən - günə artan iş yeri imkanı və istehsal gücü ilə  nəinki boya sektorunda, bütövlükdə Azərbaycan sənaye müəssisələri 
+                            arasında önəmli yerə sahibdir. Şirkət olaraq  hədəfimiz Azərbaycan məhsulunu dünyada brend olaraq  tanıtmaqdır.
+                        </p>
+                    </div>
+                    <div class="col-12 col-md-6 col-5 image d-flex justify-content-center">
+                        <div class="image"><img src="../image/2-about/img-2.jpg" class="w-100"></div>
+                    </div>
+                </div>
+            </div>
+            <section class="about-video-swiper">
+                <div class="swiper about-swiper-1 w-100">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="video-item">
+                                <div class="video-poster"><img src="../image/2-about/poster.jpg"></div>
+                                <div class="video-box">
+                                    <a href="https://www.youtube.com/watch?v=GVK5HOQEGsE" data-fancybox="gallery">
+                                        <span class="play-btn"><i class="fa-solid fa-play"></i></span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="video-item">
+                                <div class="video-poster"><img src="../image/2-about/poster.jpg"></div>
+                                <div class="video-box">
+                                    <a href="https://www.youtube.com/watch?v=GVK5HOQEGsE" data-fancybox="gallery">
+                                        <span class="play-btn"><i class="fa-solid fa-play"></i></span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="video-item">
+                                <div class="video-poster"><img src="../image/2-about/poster.jpg"></div>
+                                <div class="video-box">
+                                    <a href="https://www.youtube.com/watch?v=GVK5HOQEGsE" data-fancybox="gallery">
+                                        <span class="play-btn"><i class="fa-solid fa-play"></i></span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </main>
 
 
     <footer class="py-5">
@@ -500,6 +595,9 @@
 
 
     <script src="../bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="../swiper/swiper.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
+    <script src="../swiper.js"></script>
     <script src="../main.js"></script>
 </body>
 </html>
