--- a/2.2-renglendirme-sistemi/index.html
+++ b/2.2-renglendirme-sistemi/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobsan | Rəngləndirmə sistemi haqqında</title>
+    <title>Sobsan | Rəngləndirmə sistemi</title>
     <link rel="icon" href="../image/logo/head-icon.png">
     <link rel="stylesheet" href="../bootstrap/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/3cf65b98ce.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../swiper/swiper.bundle.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"/>
     <link rel="stylesheet" href="../main.css">
 </head>
 <body>
@@ -379,7 +381,71 @@
         </div>
     </header>
 
-    <main class="py-5"></main>
+    <main class="py-5 sobsan-about container py-5">
+        <div class="d-flex flex-column">
+            <div class="main-top-header d-flex flex-column">
+                <div class="links"><a href="../1-main/index.html">Əsas Səhifə</a><i class="fa-solid fa-chevron-right"></i><a href="../2.2-renglendirme-sistemi/index.html">Rəngləndirmə sistemi</a></div>
+                <h3>Rəngləndirmə Sistemi</h3>
+            </div>
+            <div class="about-content">
+                <div class="row">
+                    <div class="col-12 col-md-6 col-7">
+                        <p>
+                            Azərbaycanda ilk dəfə rəngləndirmə sistemi Sobsan Boyaları tərəfindən təqdim olunub. 
+                            "Sobsan Rəngləndirmə Sistemi"  kompüter, rəng hazırlama makinası və qarışdırıcıdan ibarət  
+                            olub, su əsaslı daxili və fasad boyaların hazırlanmasında istifadə olunur. Sistemin özəlliyi 
+                            təbiətdəki bütün rəngləri və tonları özündə  əks etdirə bilməsidir. Standart kataloq rənglərinin 
+                            xaricində alıcılara günün trend rəngləri ilə yanaşı sərhədsiz rəng imkanı təklif edir. Bu sistem 
+                            sayəsində hər bir satış nöqtəsi fabrik funksiyası daşıyır. İstənilən satış nöqtəsində sifariş edilən 
+                            rəngi eyni keyfiyyətdə və sadəcə 5 dəqiqə ərzində  əldə etmək  mümkündür. "Sobsan Rəngləndirmə Sistemi" 
+                            Azərbaycanın bütün regionlarındakı Sobsan mağazalarında mövcuddur. Rəngləndirmə sisteminin başlıca  
+                            xüsusiyyəti ondan ibarətdir ki, daha öncə hazırlanmış hər hansı bir rəng  təkrar sifariş olunduqda  
+                            birə-bir eyni tonu əldə etmək mümkündür.
+                        </p>
+                    </div>
+                    <div class="col-12 col-md-6 col-5 image d-flex justify-content-center">
+                        <div class="image"><img src="../image/2-about/renglendirme.png" class="w-100"></div>
+                    </div>
+                </div>
+            </div>
+            <section class="about-video-swiper">
+                <div class="swiper about-swiper-1 w-100">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="video-item">
+                                <div class="video-poster"><img src="../image/2-about/renglendirme.png"></div>
+                                <div class="video-box">
+                                    <a href="https://www.youtube.com/watch?v=hT0ESFXxqA0" data-fancybox="gallery">
+                                        <span class="play-btn"><i class="fa-solid fa-play"></i></span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="video-item">
+                                <div class="video-poster"><img src="../image/2-about/renglendirme.png"></div>
+                                <div class="video-box">
+                                    <a href="https://www.youtube.com/watch?v=hT0ESFXxqA0" data-fancybox="gallery">
+                                        <span class="play-btn"><i class="fa-solid fa-play"></i></span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="video-item">
+                                <div class="video-poster"><img src="../image/2-about/renglendirme.png"></div>
+                                <div class="video-box">
+                                    <a href="https://www.youtube.com/watch?v=hT0ESFXxqA0" data-fancybox="gallery">
+                                        <span class="play-btn"><i class="fa-solid fa-play"></i></span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </main>
 
 
     <footer class="py-5">
@@ -500,6 +566,9 @@
 
 
     <script src="../bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="../swiper/swiper.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
+    <script src="../swiper.js"></script>
     <script src="../main.js"></script>
 </body>
 </html>
