--- a/3-kataloqlar/index.html
+++ b/3-kataloqlar/index.html
@@ -1033,7 +1033,7 @@
 
     <button id="page-up-scroll-btn" class="position-fixed bottom-0 end-0 hover-effect"><i class="fa-solid fa-arrow-up"></i></button>
     <div class="main-page-cards">
-        <div class="card-qaynar-xett">
+        <div class="card-qaynar-xett d-none d-md-block">
             <a href="#" class="d-flex align-items-center">
                 <i class="fa-solid fa-phone"></i>
                 <div class="d-flex flex-column align-items-center">
