--- a/4.3-media-qalereya/index.html
+++ b/4.3-media-qalereya/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="../image/logo/head-icon.png">
     <link rel="stylesheet" href="../bootstrap/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/3cf65b98ce.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"/>
     <link rel="stylesheet" href="../main.css">
 </head>
 <body>
@@ -379,7 +380,121 @@
         </div>
     </header>
 
-    <main class="py-5"></main>
+    <main class="py-5 container sobsan-gallery">
+        <div class="d-flex flex-column align-items-center">
+            <div class="main-top-header d-flex flex-column w-100">
+                <div class="links"><a href="../1-main/index.html">Əsas Səhifə</a><i class="fa-solid fa-chevron-right"></i><a href="../4.3-media-qalereya/index.html">Qalereya</a></div>
+                <h3>Qalereya</h3>
+            </div>
+            <div class="gallery-buttons w-100 row my-5">
+                <div class="button-foto col-6 border gallery-active">Foto</div>
+                <div class="button-video col-6 border">Video</div>
+            </div>
+            <div class="foto-wrapper d-flex justify-content-center">
+                <div class="row w-100 my-3">
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <a href="../image/4-gallery/foto/img-1.jpg" data-fancybox="gallery-foto">
+                            <img src="../image/4-gallery/foto/img-1.jpg" alt="foto">
+                        </a>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <a href="../image/4-gallery/foto/img-2.jpg" data-fancybox="gallery-foto">
+                            <img src="../image/4-gallery/foto/img-2.jpg" alt="foto">
+                        </a>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <a href="../image/4-gallery/foto/img-3.jpg" data-fancybox="gallery-foto">
+                            <img src="../image/4-gallery/foto/img-3.jpg" alt="foto">
+                        </a>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <a href="../image/4-gallery/foto/img-4.jpg" data-fancybox="gallery-foto">
+                            <img src="../image/4-gallery/foto/img-4.jpg" alt="foto">
+                        </a>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <a href="../image/4-gallery/foto/img-5.jpg" data-fancybox="gallery-foto">
+                            <img src="../image/4-gallery/foto/img-5.jpg" alt="foto">
+                        </a>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <a href="../image/4-gallery/foto/img-6.jpg" data-fancybox="gallery-foto">
+                            <img src="../image/4-gallery/foto/img-6.jpg" alt="foto">
+                        </a>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <a href="../image/4-gallery/foto/img-7.jpg" data-fancybox="gallery-foto">
+                            <img src="../image/4-gallery/foto/img-7.jpg" alt="foto">
+                        </a>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <a href="../image/4-gallery/foto/img-8.jpg" data-fancybox="gallery-foto">
+                            <img src="../image/4-gallery/foto/img-8.jpg" alt="foto">
+                        </a>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <a href="../image/4-gallery/foto/img-9.jpg" data-fancybox="gallery-foto">
+                            <img src="../image/4-gallery/foto/img-9.jpg" alt="foto">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="video-wrapper d-flex justify-content-center d-none">
+                <div class="row w-100 my-3">
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="video-item">
+                            <div class="video-poster"><img src="../image/4-gallery/video/img-1.png"></div>
+                            <div class="video-box">
+                                <a href="https://www.youtube.com/watch?v=coiF0gf7Ejk" data-fancybox="gallery-video">
+                                    <span class="play-btn"><i class="fa-solid fa-play"></i></span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="video-item">
+                            <div class="video-poster"><img src="../image/4-gallery/video/img-2.jpg"></div>
+                            <div class="video-box">
+                                <a href="https://www.youtube.com/watch?v=6JicHUNrn-k" data-fancybox="gallery-video">
+                                    <span class="play-btn"><i class="fa-solid fa-play"></i></span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="video-item">
+                            <div class="video-poster"><img src="../image/4-gallery/video/img-3.png"></div>
+                            <div class="video-box">
+                                <a href="https://www.youtube.com/watch?v=hT0ESFXxqA0" data-fancybox="gallery-video">
+                                    <span class="play-btn"><i class="fa-solid fa-play"></i></span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="video-item">
+                            <div class="video-poster"><img src="../image/4-gallery/video/img-4.jpg"></div>
+                            <div class="video-box">
+                                <a href="https://www.youtube.com/watch?v=GVK5HOQEGsE" data-fancybox="gallery-video">
+                                    <span class="play-btn"><i class="fa-solid fa-play"></i></span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="video-item">
+                            <div class="video-poster"><img src="../image/4-gallery/video/img-5.jpg"></div>
+                            <div class="video-box">
+                                <a href="https://www.youtube.com/watch?v=MPx4mekJkNA" data-fancybox="gallery-video">
+                                    <span class="play-btn"><i class="fa-solid fa-play"></i></span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 
 
     <footer class="py-5">
@@ -453,7 +568,7 @@
 
     <button id="page-up-scroll-btn" class="position-fixed bottom-0 end-0 hover-effect"><i class="fa-solid fa-arrow-up"></i></button>
     <div class="main-page-cards">
-        <div class="card-qaynar-xett">
+        <div class="card-qaynar-xett d-none d-md-block">
             <a href="#" class="d-flex align-items-center">
                 <i class="fa-solid fa-phone"></i>
                 <div class="d-flex flex-column align-items-center">
@@ -500,6 +615,7 @@
 
 
     <script src="../bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
     <script src="../main.js"></script>
 </body>
 </html>
