--- a/4.2-media-xeberler/index.html
+++ b/4.2-media-xeberler/index.html
@@ -379,7 +379,12 @@
         </div>
     </header>
 
-    <main class="py-5"></main>
+    <main class="py-5 container">
+        <div class="main-top-header d-flex flex-column">
+            <div class="links"><a href="../1-main/index.html">Əsas Səhifə</a><i class="fa-solid fa-chevron-right"></i><a href="../4.2-media-xeberler/index.html">Xəbərlər</a></div>
+            <h3>Xəbərlər</h3>
+        </div>
+    </main>
 
 
     <footer class="py-5">
